<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Password Generator</string>
	<string name="show_phonetic">Show Phonetic</string>
	<string name="include_lowercase">Lower Case</string>
	<string name="include_uppercase">Upper Case</string>
	<string name="include_numbers">Numbers</string>
	<string name="include_punctuations">Punctuations</string>
	<string name="generate_password">Generate Password</string>
	<string name="menu_clear">Clear</string>
	<string name="menu_send">Send</string>
	<string name="subject_send_action">Randomly Generated Password</string>
	<string name="title_send_action">Send</string>
	<string name="template_send">
	Password: %s
	Generated by Password Generator
	</string>
	<string name="template_send_phonetic">
	Password: %s
	Phonetic: %s
	Generated by Password Generator
	</string>
</resources>